Intel Labs -> POSTECH

--- a/academic_activities.html
+++ b/academic_activities.html
@@ -86,22 +86,15 @@
 <!-- Source -->
 <div class="container">
 	<div class="col-lg-6 text-left">
-            <h2> <span class="glyphicon glyphicon-globe"></span>  Program Committee</h2>
-            <ul class="list-group">
-                <li class="list-group-item">
-                    Area Chair, International Conference on Computer Vision (ICCV), 2019<br>
-                </li>
-            </ul>
 			<h2> <span class="glyphicon glyphicon-sunglasses"></span>  Reviewer</h2>
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3>International Conference</h3>
-                    ACM SIGGRAPH 2017 - 2019<br>
-					ACM SIGGRAPH ASIA 2016 - 2018<br>
-					IEEE Computer Vision and Pattern Recognition (CVPR), 2014 - 2019<br>
+					ACM SIGGRAPH 2017, 2018<br>
+					ACM SIGGRAPH ASIA 2016, 2017<br>
+					IEEE Computer Vision and Pattern Recognition (CVPR), 2014 - 2018<br>
 					International Conference on Computer Vision (ICCV), 2015, 2017<br>
 					The European Conference on Computer Vision (ECCV), 2012, 2016, 2018<br>
-                    International Conference on Robotics and Automation (ICRA), 2019<br>
 					British Machine Vision Conference (BMVC), 2017<br>
 					International Conference on 3D Vision (3DV), 2015 - 2017<br>
 					Asian Conference on Computer Vision (ACCV), 2016<br>
@@ -131,10 +124,6 @@
 	<div class="col-lg-6 text-left">
 			<h2> <span class="glyphicon glyphicon-tower"></span>  Awards</h2>
 			<ul class="list-group">
-            <li class="list-group-item">
-				<h4>Research Velocity Challenge Award</h4>
-				(A competition on research proposal and demonstration) Intel Labs, Dec. 2018.
-			</li>
 			<li class="list-group-item">
 				<h4>Depth estimation challenge: robustness champion</h4>
 				CVPR workshop on Light Fields for Computer Vision, July 2017.
@@ -149,23 +138,15 @@
 			</li>
 			<li class="list-group-item">
 				<h4>Honor Prize</h4>
-				Annual Ph.D. Research Progress Evaluation, KAIST, May 2015.
+				Annual Ph.D. Research Progress Evaluation, KAIST, May 2014 and May 2015.
 			</li>
 			<li class="list-group-item">
 				<h4>CVPR 2015 Doctoral Consortium</h4>
 				IEEE CVPR, April 2015.
 			</li>
 			<li class="list-group-item">
-				<h4>Honor Prize</h4>
-				Annual Ph.D. Research Progress Evaluation, KAIST, May 2014.
-			</li>
-			<li class="list-group-item">
 				<h4>HumanTech Paper Award (Silver Prize)</h4>
-				Samsung Electronics Corp., Feb. 2014.
-			</li>
-			<li class="list-group-item">
-				<h4>HumanTech Paper Award (Silver Prize)</h4>
-				Samsung Electronics Corp., Feb. 2013.
+				Samsung Electronics Corp., Feb. 2013 and Feb. 2014.
 			</li>
 			<li class="list-group-item">
 				<h4>Best Paper Award</h4>
