--- a/index.html
+++ b/index.html
@@ -80,11 +80,15 @@
 			</div>
 			<div class="col-lg-9">
 				<h1>Jaesik Park</h1>
-				<p class="lead">Hello! I am a Research Scientist of Intel Intelligent Systems Lab located in beautiful California.</p>
+				<p class="lead">Hello! I am an Assiant Professor at POSTECH.</p>
+				<p>I am looking for self-motivated students who will escalate POSTECH computer vision lab together. Please contact me if interested.</p> 
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						2018.12. I will serve as an <a href="http://iccv2019.thecvf.com/area_chairs" target="_blank">area chair</a> for <b>ICCV</b> 2019 .
+						2019.04. I joined <a href="http://www.postech.ac.kr/eng/" target="_blank">POSTECH</a> as an Assistant Professor.
+					</li>
+					<li class="list-group-item">
+						2018.12. I will serve as an <a href="http://iccv2019.thecvf.com/area_chairs" target="_blank">Area Chair</a> for <b>ICCV</b> 2019 .
 					</li>
 					<li class="list-group-item">
 						2018.12. Our team (Marcel Nassar, Zhuwen Li, and myself) received <b>Research Velocity Challenge Award</b> from Intel.
@@ -98,9 +102,6 @@
 					<li class="list-group-item">
 						2018.03. Our paper about new convolution framework for large-scale point cloud segmentation is accepted to <b>CVPR 2018</b></a>.
 					</li>
-					<li class="list-group-item">
-						2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
-					</li>
 					<div id="accordion">
 						<div class="card">
 							<div class="card-header" id="heading-previous-news">
@@ -112,6 +113,9 @@
 								</h5>
 							</div>
 							<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+								<li class="list-group-item">
+									2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
+								</li>	
 								<li class="list-group-item">
 									2018.01. A multi-task network for joint head detection and pose estimation is accepted to RAS.
 								</li>
@@ -143,8 +147,7 @@
 			</div>
 		</div>
 	</div>
-</div>
-<!-- Footer -->
+</div><!-- Footer -->
 <footer>
 		<div class="container">
 				<div class="row">
