--- a/source/index.html
+++ b/source/index.html
@@ -8,30 +8,71 @@
 					<img src="source/jaesik-park.jpg" class="img-responsive img-circle img-thumbnail">
 			</div>
 			<div class="col-lg-9">
-					<h1>Jaesik Park</h1>
-					<p class="lead">Hello! I am a research scientist of Intel visual computing lab located in beautiful California.</p>
-					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
-					<ul class="list-group">
-						<li class="list-group-item">
-							2018.03. Our paper about new convolution framework for large-scale point cloud segmentation is accepted to CVPR 2018</a>.
-						</li>
-						<li class="list-group-item">
-							2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
-						</li>
-						<li class="list-group-item">
-							2017.12. A learning-based method for depth from light field is accepted to PAMI. Paper comming soon.
-						</li>
-						<li class="list-group-item">
-							2017.08. Launching new homepage for better visualization on workstation and mobile.
-						</li>
-						<li class="list-group-item">
-							2017.05. We are releasing <a href="http://www.tanksandtemples.org" target="_blank">www.tanksandtemples.org</a>: website for benchmarking photogrammetry methods.
-						</li>
-						<li class="list-group-item">
-							2017.05. Our paper about image based 3D reconstruction benchmark is accepted to SIGGRAPH 2017.
-						</li>
-					</ul>
-			</div>
+				<h1>Jaesik Park</h1>
+				<p class="lead">Hello! I am an Assiant Professor at POSTECH.</p>
+				<p>I am looking for self-motivated students who will escalate POSTECH computer vision lab together. Please contact me if interested.</p> 
+				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
+				<ul class="list-group">
+					<li class="list-group-item">
+						2019.04. I joined <a href="http://www.postech.ac.kr/eng/" target="_blank">POSTECH</a> as an Assistant Professor.
+					</li>
+					<li class="list-group-item">
+						2018.12. I will serve as an <a href="http://iccv2019.thecvf.com/area_chairs" target="_blank">Area Chair</a> for <b>ICCV</b> 2019 .
+					</li>
+					<li class="list-group-item">
+						2018.12. Our team (Marcel Nassar, Zhuwen Li, and myself) received <b>Research Velocity Challenge Award</b> from Intel.
+					</li>
+					<li class="list-group-item">
+						2018.11. <b>Open3D</b> received <a href="http://github.com/IntelVCL/Open3D" target="_blank">1k Github stars</a>.
+					</li>
+					<li class="list-group-item">
+						2018.06. I am attending CVPR 2018 to present the accepted paper.
+					</li>
+					<li class="list-group-item">
+						2018.03. Our paper about new convolution framework for large-scale point cloud segmentation is accepted to <b>CVPR 2018</b></a>.
+					</li>
+					<div id="accordion">
+						<div class="card">
+							<div class="card-header" id="heading-previous-news">
+								<h5 class="mb-0">
+									<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse-previous-news" aria-expanded="false"
+										aria-controls="collapse-previous-news">
+										Previous news &#9661;
+									</button>
+								</h5>
+							</div>
+							<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+								<li class="list-group-item">
+									2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
+								</li>	
+								<li class="list-group-item">
+									2018.01. A multi-task network for joint head detection and pose estimation is accepted to RAS.
+								</li>
+								<li class="list-group-item">
+									2017.12. A learning-based method for depth from light field is accepted to <b>TPAMI</b>. Paper comming soon.
+								</li>
+								<li class="list-group-item">
+									2017.08. Launching <a href="http://www.jaesik.info" target="_blank">jaesik.info</a> for better visualization on workstation or mobile platforms.
+								</li>
+								<li class="list-group-item">
+									2017.05. We are releasing <a href="http://www.tanksandtemples.org" target="_blank">www.tanksandtemples.org</a>: website for benchmarking photogrammetry methods.
+								</li>
+								<li class="list-group-item">
+									2017.05. Our paper about image based 3D reconstruction benchmark is accepted to <b>SIGGRAPH</b> 2017.
+								</li>
+								<li class="list-group-item">
+									2017.02. An algorithm about learning based automatic 3D view selection is accepted to Computer Graphics Forum.
+								</li>
+								<li class="list-group-item">
+									2016.08. A paper about high-quality 3D reconstruction is accepted to <b>TPAMI</b>.
+								</li>
+								<li class="list-group-item">
+									2016.07. A paper about global point-cloud registration is accepted to <b>ECCV</b> 2016 as an <b>oral</b> presentation.
+								</li>
+							</div>
+						</div>
+					</div>
+				</ul>
 			</div>
 		</div>
 	</div>
