--- a/publications.html
+++ b/publications.html
@@ -113,9 +113,15 @@
 		<h3>Tangent Convolutions for Dense Prediction in 3D</h3>
 		<p>Maxim Tatarchenko*, Jaesik Park*, Vladlen Koltun, and Qian-Yi Zhou<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2018<br>
-		(*Equal contributions. <b>Spotlight</b> Presentation)</p>
+		(*Equal contributions. <b>Spotlight Oral</b> Presentation)</p>
 		<a href="http://vladlen.info/publications/tangent-convolutions-dense-prediction-3d/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
+		</a>
+		<a href="http://jaesik.info/publications/data/18_cvpr.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
 	</div>
 </div>
