--- a/source/about_me.html
+++ b/source/about_me.html
@@ -4,9 +4,14 @@
 			<h2> <span class="glyphicon glyphicon-briefcase"></span>  Work Experience</h2>
 			<ul class="list-group">
 			<li class="list-group-item">
+				<h4>Assistant Professor - POSTECH</h4>
+				<span class="glyphicon glyphicon-map-marker"></span> Pohang, Kyungbuk, Republic of Korea<br>
+				<span class="glyphicon glyphicon-calendar"></span> April 2019 - <kbd>current</kbd>
+			</li>
+			<li class="list-group-item">
 				<h4>Staff Research Scientist - Intel Labs</h4>
 				<span class="glyphicon glyphicon-map-marker"></span> Santa Clara, California, USA<br>
-				<span class="glyphicon glyphicon-calendar"></span> Dec. 2015 - <kbd>current</kbd>
+				<span class="glyphicon glyphicon-calendar"></span> Dec. 2015 - March 2019
 			</li>
 			<li class="list-group-item">
 				<h4>Post-Doc Researcher - KAIST</h4>
