--- a/academic_activities.html
+++ b/academic_activities.html
@@ -86,15 +86,22 @@
 <!-- Source -->
 <div class="container">
 	<div class="col-lg-6 text-left">
+			<h2> <span class="glyphicon glyphicon-globe"></span>  Program Committee</h2>	
+			<ul class="list-group">	
+				<li class="list-group-item">	
+					Area Chair, International Conference on Computer Vision (ICCV), 2019<br>		
+				</li>
+			</ul>
 			<h2> <span class="glyphicon glyphicon-sunglasses"></span>  Reviewer</h2>
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3>International Conference</h3>
-					ACM SIGGRAPH 2017, 2018<br>
-					ACM SIGGRAPH ASIA 2016, 2017<br>
+					ACM SIGGRAPH 2017 - 2019<br>
+					ACM SIGGRAPH ASIA 2016 - 2018<br>
 					IEEE Computer Vision and Pattern Recognition (CVPR), 2014 - 2018<br>
 					International Conference on Computer Vision (ICCV), 2015, 2017<br>
 					The European Conference on Computer Vision (ECCV), 2012, 2016, 2018<br>
+					International Conference on Robotics and Automation (ICRA), 2019<br>
 					British Machine Vision Conference (BMVC), 2017<br>
 					International Conference on 3D Vision (3DV), 2015 - 2017<br>
 					Asian Conference on Computer Vision (ACCV), 2016<br>
@@ -124,6 +131,10 @@
 	<div class="col-lg-6 text-left">
 			<h2> <span class="glyphicon glyphicon-tower"></span>  Awards</h2>
 			<ul class="list-group">
+			<li class="list-group-item">	
+				<h4>Research Velocity Challenge Award</h4>	
+				Intel Labs, Dec. 2018.
+			</li>
 			<li class="list-group-item">
 				<h4>Depth estimation challenge: robustness champion</h4>
 				CVPR workshop on Light Fields for Computer Vision, July 2017.
