--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						2019.05. Open3D is being supported by <a href="https://developers.google.com/season-of-docs/docs/participants/" target="_blank">Google Season of Docs</a>.</li>
+					<li class="list-group-item">
 						2019.04. I joined <a href="http://www.postech.ac.kr/eng/" target="_blank">POSTECH</a> as an Assistant Professor.
 					</li>
 					<li class="list-group-item">
@@ -146,7 +148,8 @@
 			</div>
 		</div>
 	</div>
-</div><!-- Footer -->
+</div>
+<!-- Footer -->
 <footer>
 		<div class="container">
 				<div class="row">
