--- a/academic_activities.html
+++ b/academic_activities.html
@@ -131,6 +131,10 @@
 	<div class="col-lg-6 text-left">
 			<h2> <span class="glyphicon glyphicon-tower"></span>  Awards</h2>
 			<ul class="list-group">
+			<li class="list-group-item">
+				<h4>Google Season of Docs</h4>
+				Technical support for Open3D, Google, April 2019.
+			</li>
 			<li class="list-group-item">	
 				<h4>Research Velocity Challenge Award</h4>	
 				Intel Labs, Dec. 2018.
