--- a/academic_activities.html
+++ b/academic_activities.html
@@ -88,26 +88,28 @@
 	<div class="col-lg-6 text-left">
 			<h2> <span class="glyphicon glyphicon-globe"></span>  Program Committee</h2>	
 			<ul class="list-group">	
-				<li class="list-group-item">	
-					Area Chair, International Conference on Computer Vision (ICCV), 2019<br>		
+				<li class="list-group-item">
+					Area Chair, Int. Conf. on Computer Vision and Pattern Recognition (CVPR), 2020<br>
+					Area Chair, Int. Conf. on Computer Vision (ICCV), 2019		
 				</li>
 			</ul>
 			<h2> <span class="glyphicon glyphicon-sunglasses"></span>  Reviewer</h2>
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3>International Conference</h3>
-					ACM SIGGRAPH 2017 - 2019<br>
-					ACM SIGGRAPH ASIA 2016 - 2018<br>
-					IEEE Computer Vision and Pattern Recognition (CVPR), 2014 - 2018<br>
-					International Conference on Computer Vision (ICCV), 2015, 2017<br>
-					The European Conference on Computer Vision (ECCV), 2012, 2016, 2018<br>
-					International Conference on Robotics and Automation (ICRA), 2019<br>
-					British Machine Vision Conference (BMVC), 2017<br>
-					International Conference on 3D Vision (3DV), 2015 - 2017<br>
-					Asian Conference on Computer Vision (ACCV), 2016<br>
-					IEEE Winter Conference on Applications of Computer Vision (WACV), 2014<br>
-					IEEE International Conference on Image Processing (ICIP), 2014<br>
-					IAPR International conference on pattern recognition (ICPR), 2012<br>
+					ACM SIGGRAPH<br>
+					ACM SIGGRAPH ASIA<br>
+					IEEE Computer Vision and Pattern Recognition (CVPR)<br>
+					International Conference on Computer Vision (ICCV)<br>
+					The European Conference on Computer Vision (ECCV)<br>
+					International Conference on Robotics and Automation (ICRA)<br>
+					International Conference on Intelligent Robots and Systems (IROS)<br>
+					British Machine Vision Conference (BMVC)<br>
+					International Conference on 3D Vision (3DV)<br>
+					Asian Conference on Computer Vision (ACCV)<br>
+					IEEE Winter Conference on Applications of Computer Vision (WACV)<br>
+					IEEE International Conference on Image Processing (ICIP)<br>
+					IAPR International conference on pattern recognition (ICPR)<br>
 				</li>
 				<li class="list-group-item">
 					<h3>International Journal</h3>
