--- a/publications.html
+++ b/publications.html
@@ -99,8 +99,87 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
+		<h2 class="name">2019</h2>
+	</div>
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/19_iccv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Fully Convolutional Geometric Features</h3>
+		<p>Christopher Choy, Jaesik Park, Vladlen Koltun<br>
+		International Conference on Computer Vision (<b>ICCV</b>), 2019<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/19_iros.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>GPU Accelerated Robust Scene Reconstruction</h3>
+		<p>Wei Dong, Jaesik Park, Yi Yang, Michael Kaess<br>
+		IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2019<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/18_pami.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Depth from a Light Field Image with Learning-based Matching Costs</h3>
+		<p>Hae-Gon Jeon, Jaesik Park, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon<br>
+		IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2019<br>
+		</p>
+		<a href="http://ieeexplore.ieee.org/document/8263242/" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<hr>
+<div class="container">
+<div class="row">
+	<div class="col-lg-12 text-left">
 		<h2 class="name">2018</h2>
 	</div>
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/18_arxiv2.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>HUMBI 1.0: HUman Multiview Behavioral Imaging Dataset</h3>
+		<p>Zhixuan Yu, Jae Shin Yoon, Prashanth Venkatesh, Jaesik Park, Jihun Yu, Hyun Soo Park<br>
+		Technical Report, arXiv:1812.00281, 2018<br>
+		</p>
+		<a href="https://arxiv.org/abs/1812.00281" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
 </div>
 </div>
 
@@ -168,25 +247,6 @@
 		Robotics and Autonomous Systems (<b>RAS</b>), 2018<br>
 		</p>
 		<a href="https://www.sciencedirect.com/science/article/pii/S0921889017303524" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-file"></span> Paper
-		</a>
-	</div>
-</div>
-<div class="row" style="height: 30px">
-</div>
-</div>
-
-<div class="container">
-<div class="row">
-	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/data/18_pami.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-	</div>
-	<div class="col-lg-7">
-		<h3>Depth from a Light Field Image with Learning-based Matching Costs</h3>
-		<p>Hae-Gon Jeon, Jaesik Park, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon<br>
-		IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2018<br>
-		</p>
-		<a href="http://ieeexplore.ieee.org/document/8263242/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -468,8 +528,11 @@
 		<p>Hae-Gon Jeon, Jaesik Park, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2015<br>
 		</p>
-		<a href="https://sites.google.com/site/hgjeoncv/home/depthfromlf_cvpr15" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-home"></span> Project Page
+		<a href="https://www.cv-foundation.org/openaccess/content_cvpr_2015/papers/Jeon_Accurate_Depth_Map_2015_CVPR_paper.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://drive.google.com/open?id=0B2553ggh3QTcS01zU0RjOG5FTjQ" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
 	</div>
 </div>
