--- a/source/index.html
+++ b/source/index.html
@@ -13,24 +13,21 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						2019.07. I will serve as an Area Chair for <b>CVPR 2020</b>.
+					</li>
+					<li class="list-group-item">
+						2019.07. One paper regarding geometric feature learning had been accepted to <b>ICCV 2019</b>.
+					</li>
+					<li class="list-group-item">
+						2019.07. One paper on high-quality texture mapping for dynamic objects to Pacific Graphics 2019.
+					</li>
+					<li class="list-group-item">
+						2019.06. One paper about fast indoor scene reconstruction had been accepted to IROS 2019.
+					</li>
+					<li class="list-group-item">
 						2019.05. Open3D is being supported by <a href="https://developers.google.com/season-of-docs/docs/participants/" target="_blank">Google Season of Docs</a>.</li>
 					<li class="list-group-item">
 						2019.04. I joined <a href="http://www.postech.ac.kr/eng/" target="_blank">POSTECH</a> as an Assistant Professor.
-					</li>
-					<li class="list-group-item">
-						2018.12. I will serve as an <a href="http://iccv2019.thecvf.com/area_chairs" target="_blank">Area Chair</a> for <b>ICCV</b> 2019 .
-					</li>
-					<li class="list-group-item">
-						2018.12. Our team (Marcel Nassar, Zhuwen Li, and myself) received <b>Research Velocity Challenge Award</b> from Intel.
-					</li>
-					<li class="list-group-item">
-						2018.11. <b>Open3D</b> received <a href="http://github.com/IntelVCL/Open3D" target="_blank">1k Github stars</a>.
-					</li>
-					<li class="list-group-item">
-						2018.06. I am attending CVPR 2018 to present the accepted paper.
-					</li>
-					<li class="list-group-item">
-						2018.03. Our paper about new convolution framework for large-scale point cloud segmentation is accepted to <b>CVPR 2018</b></a>.
 					</li>
 					<div id="accordion">
 						<div class="card">
@@ -43,6 +40,21 @@
 								</h5>
 							</div>
 							<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+								<li class="list-group-item">
+									2018.12. I will serve as an <a href="http://iccv2019.thecvf.com/area_chairs" target="_blank">Area Chair</a> for <b>ICCV 2019</b>.
+								</li>
+								<li class="list-group-item">
+									2018.12. Our team (Marcel Nassar, Zhuwen Li, and myself) received <b>Research Velocity Challenge Award</b> from Intel.
+								</li>
+								<li class="list-group-item">
+									2018.11. <b>Open3D</b> received <a href="http://github.com/IntelVCL/Open3D" target="_blank">1k Github stars</a>.
+								</li>
+								<li class="list-group-item">
+									2018.06. I am attending CVPR 2018 to present the accepted paper.
+								</li>
+								<li class="list-group-item">
+									2018.03. Our paper about new convolution framework for large-scale point cloud segmentation is accepted to <b>CVPR 2018</b></a>.
+								</li>
 								<li class="list-group-item">
 									2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
 								</li>	
