--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 						2019.07. I will serve as an Area Chair for <b>CVPR 2020</b>.
 					</li>
 					<li class="list-group-item">
-						2019.07. One paper regarding geometric feature learning had been accepted to <b>ICCV 2019</b>.
+						2019.07. One paper regarding geometric feature learning is accepted to <b>ICCV 2019</b>.
 					</li>
 					<li class="list-group-item">
-						2019.07. One paper on high-quality texture mapping for dynamic objects to Pacific Graphics 2019.
+						2019.07. One paper on high-quality texture mapping for dynamic objects is accepted to Pacific Graphics 2019.
 					</li>
 					<li class="list-group-item">
-						2019.06. One paper about fast indoor scene reconstruction had been accepted to IROS 2019.
+						2019.06. One paper about fast indoor scene reconstruction is accepted to IROS 2019.
 					</li>
 					<li class="list-group-item">
 						2019.05. Open3D is being supported by <a href="https://developers.google.com/season-of-docs/docs/participants/" target="_blank">Google Season of Docs</a>.</li>
