--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
 						2019.07. One paper regarding geometric feature learning is accepted to <b>ICCV 2019</b>.
 					</li>
 					<li class="list-group-item">
-						2019.07. One paper on high-quality texture mapping for dynamic objects is accepted to Pacific Graphics 2019.
+						2019.07. One paper on high-quality texture mapping for dynamic objects is conditionally accepted to Pacific Graphics 2019.
 					</li>
 					<li class="list-group-item">
 						2019.06. One paper about fast indoor scene reconstruction is accepted to IROS 2019.
