--- a/source/contact.html
+++ b/source/contact.html
@@ -4,7 +4,7 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-envelope"></span> Email</h3>
 		[my_first_name] [dot] [my_last_name] [at] postech.ac.kr<br>
 		<h3 class="name"> <span class="glyphicon glyphicon-map-marker"></span> Office</h3>
-		Room 435, Postech Information Research Laboratories (정보통신연구소), POSTECH, Republich of Korea
+		Room 435, Chungam-Ro 77, Postech Information Research Laboratories, POSTECH, Pohang-Si, Republic of Korea (Zip: 37673)<br><br>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1613.69846282122!2d129.3202229581674!3d36.01059949502972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356701d544c5994b%3A0xa2ac55d184c08baa!2zUG9oYW5nLCBIeW9qYS1kb25nLCDtj6ztla3qs7Xqs7zrjIDtlZnqtZAg7KCV67O07Ya17Iug7Jew6rWs7IaM!5e0!3m2!1sen!2skr!4v1554072102395!5m2!1sen!2skr" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
 </div>
