--- a/publications/identigram/index.html
+++ b/publications/identigram/index.html
@@ -128,7 +128,7 @@
 				<div class="row">
 						<div class="col-lg-12">
 								<p><br></p>
-								<p class="copyright text-center">Copyright &copy; jaesik.info 2018.</p>
+								<p class="copyright text-center">Copyright &copy; jaesik.info 2017-2019.</p>
 								<p><br></p>
 						</div>
 				</div>
