update on ICCV 2019

--- a/publications.html
+++ b/publications.html
@@ -111,9 +111,9 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Fully Convolutional Geometric Features</h3>
-		<p>Christopher Choy, Jaesik Park, Vladlen Koltun<br>
+		<p>Christopher Choy*, Jaesik Park*, Vladlen Koltun<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2019<br>
-		</p>
+		(*Equal contributions)</p>
 		<a href="http://jaesik.info/publications/data/19_iccv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
@@ -201,9 +201,6 @@
 		</a>
 		<a href="http://jaesik.info/publications/data/18_cvpr.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
-		</a>
-		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
 	</div>
 </div>
