--- a/publications.html
+++ b/publications.html
@@ -111,7 +111,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Fully Convolutional Geometric Features</h3>
-		<p>Christopher Choy*, Jaesik Park*, Vladlen Koltun<br>
+		<p>Christopher Choy*, Jaesik Park*, and Vladlen Koltun<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2019<br>
 		(*Equal contributions)</p>
 		<a href="http://jaesik.info/publications/data/19_iccv.pdf" target="_blank" class="btn btn-default" role="button">
@@ -126,11 +126,27 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/19_pg.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Global Texture Mapping for Dynamic Objects</h3>
+		<p>Jungeon Kim, Hyomin Kim, Jaesik Park, and Seungyong Lee<br>
+		Pacific Graphics (<b>PG</b>), 2019<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/19_iros.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>GPU Accelerated Robust Scene Reconstruction</h3>
-		<p>Wei Dong, Jaesik Park, Yi Yang, Michael Kaess<br>
+		<p>Wei Dong, Jaesik Park, Yi Yang, and Michael Kaess<br>
 		IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2019<br>
 		</p>
 	</div>
@@ -174,7 +190,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>HUMBI 1.0: HUman Multiview Behavioral Imaging Dataset</h3>
-		<p>Zhixuan Yu, Jae Shin Yoon, Prashanth Venkatesh, Jaesik Park, Jihun Yu, Hyun Soo Park<br>
+		<p>Zhixuan Yu, Jae Shin Yoon, Prashanth Venkatesh, Jaesik Park, Jihun Yu, and Hyun Soo Park<br>
 		Technical Report, arXiv:1812.00281, 2018<br>
 		</p>
 		<a href="https://arxiv.org/abs/1812.00281" target="_blank" class="btn btn-default" role="button">
