add/modify dataset/code links

--- a/publications.html
+++ b/publications.html
@@ -321,6 +321,9 @@
 		<a href="http://jaesik.info/publications/data/17_siggraph.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
+		<a href="https://github.com/intel-isl/TanksAndTemples" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -428,6 +431,9 @@
 		<a href="http://jaesik.info/publications/photoconsistency/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
+		<a href="https://github.com/syncle/photo_consistency" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -446,6 +452,9 @@
 		(<b>Oral</b> Presentation, 3.9% acceptance rate)</p>
 		<a href="https://sites.google.com/site/hyowoncv/ha_cvpr16" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
+		</a>
+		<a href="https://github.com/hyowonha/DfUSMC" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
 		</a>
 	</div>
 </div>
