adding more links

--- a/publications.html
+++ b/publications.html
@@ -218,6 +218,9 @@
 		<a href="http://jaesik.info/publications/data/18_cvpr.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
+		<a href="https://github.com/tatarchm/tangent_conv" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -299,6 +302,12 @@
 		<a href="http://jaesik.info/publications/data/17_iccv_supp.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
 		</a>
+		<a href="http://redwood-data.org/indoor_lidar_rgbd/code.html" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
+		<a href="http://redwood-data.org/indoor_lidar_rgbd/download.html" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-download-alt"></span> Data
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -323,6 +332,9 @@
 		</a>
 		<a href="https://github.com/intel-isl/TanksAndTemples" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-pencil"></span> Code
+		</a>
+		<a href="https://www.tanksandtemples.org/download/" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-download-alt"></span> Data
 		</a>
 	</div>
 </div>
