--- a/publications.html
+++ b/publications.html
@@ -113,7 +113,7 @@
 		<h3>Fully Convolutional Geometric Features</h3>
 		<p>Christopher Choy*, Jaesik Park*, and Vladlen Koltun<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2019<br>
-		(*Equal contributions)</p>
+		(*Equal contribution)</p>
 		<a href="http://jaesik.info/publications/data/19_iccv.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
@@ -211,7 +211,7 @@
 		<h3>Tangent Convolutions for Dense Prediction in 3D</h3>
 		<p>Maxim Tatarchenko*, Jaesik Park*, Vladlen Koltun, and Qian-Yi Zhou<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2018<br>
-		(*Equal contributions. <b>Spotlight Oral</b> Presentation)</p>
+		(*Equal contribution. <b>Spotlight Oral</b> Presentation)</p>
 		<a href="http://vladlen.info/publications/tangent-convolutions-dense-prediction-3d/" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
@@ -348,8 +348,8 @@
 		<img src="publications/data/17_cgf.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
-		<h3>Category‐Specific Salient View Selection via Deep Convolutional Neural Networks</h3>
-		<p>Seong‐heum Kim, Yu‐Wing Tai, Joon‐Young Lee, Jaesik Park, and In So Kweon<br>
+		<h3>Category Specific Salient View Selection via Deep Convolutional Neural Networks</h3>
+		<p>Seong heum Kim, Yu Wing Tai, Joon Young Lee, Jaesik Park, and In So Kweon<br>
 		Computer Graphics Forum (<b>CGF</b>), 2017<br>
 		</p>
 		<a href="http://rcv.kaist.ac.kr/v2/bbs/board.php?bo_table=rs_publications&wr_id=547" target="_blank" class="btn btn-default" role="button">
@@ -849,7 +849,7 @@
 		<h3>High Quality Depth Map Upsampling for 3D-TOF Cameras</h3>
 		<p>Jaesik Park*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown and In-So Kweon<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2011<br>
-		*Equal contributions.</p>
+		*Equal contributions</p>
 		<a href="http://jaesik.info/publications/depthups/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
