update IROS pdf

--- a/publications.html
+++ b/publications.html
@@ -149,6 +149,9 @@
 		<p>Wei Dong, Jaesik Park, Yi Yang, and Michael Kaess<br>
 		IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2019<br>
 		</p>
+		<a href="http://dongwei.info/publications/open3d-gpu.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
