--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			</div>
 			<div class="col-lg-9">
 				<h1>Jaesik Park</h1>
-				<p class="lead">Hello! I am an Assiant Professor at POSTECH. I am looking for self-motivated students to escalate <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together. Please contact me if interested.</p> 
+				<p class="lead">Hello! I am an Assiant Professor at POSTECH. I am looking for self-motivated students to escalate <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together. Please <a href="http://jaesik.info/contact.html">contact me</a> if interested.</p>
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
