--- a/source/contact.html
+++ b/source/contact.html
@@ -1,10 +1,46 @@
 <!-- Source -->
 <div class="container">
 	<div class="col-lg-12 text-left">
+		<h3 class="name"> <span class="glyphicon glyphicon-tree-deciduous"></span> How to contact</h3>
+		<div class="col-lg-6 text-left">
+			<ul class="list-group">
+				<li class="list-group-item">
+					<h4>For applying POSTECH computer vision lab</h4>
+					1) Please send your CV to me via email<br>
+					2) Apply <a href="http://admission.postech.ac.kr/" target="_blank"> POSTECH graduate school</a><br>
+					3) Once approved, schedule an online/offline meeting with me</a>
+				</li>
+			</ul>
+		</div>
+		<div class="col-lg-6 text-left">
+			<ul class="list-group">
+				<li class="list-group-item">
+					<h4>For scheduling an online/offline meeting</h4>
+					1) Please check out <a href="https://calendar.google.com/calendar/embed?src=syncle%40gmail.com&ctz=Asia%2FSeoul" target="_blank">my calendar</a><br>
+					2) Find any available time<br>
+					3) Send an email or a calendar invitation with the available time
+				</li>
+			</ul>
+		</div>
 		<h3 class="name"> <span class="glyphicon glyphicon-envelope"></span> Email</h3>
-		[my_first_name] [dot] [my_last_name] [at] postech.ac.kr<br>
+		<div class="col-lg-12 text-left">
+			<ul class="list-group">
+				<li class="list-group-item">
+					[my_first_name] [dot] [my_last_name] [at] postech.ac.kr
+				</li>
+			</ul>
+		</div>
 		<h3 class="name"> <span class="glyphicon glyphicon-map-marker"></span> Office</h3>
-		Room 317, Chungam-Ro 77, Science Building Ⅱ, POSTECH, Pohang-Si, Republic of Korea (Zip: 37673)<br><br>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1613.6586229797967!2d129.32099752385267!3d36.01254565132359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356701d5bd6bfb23%3A0x471a066a5e57ed04!2zUG9oYW5nLCBIeW9qYS1kb25nLCDtj6ztla3qs7Xqs7zrjIDtlZnqtZAg7KCcMuqzte2Vmeq0gA!5e0!3m2!1sen!2skr!4v1566448360900!5m2!1sen!2skr" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<div class="col-lg-12 text-left">
+			<ul class="list-group">
+				<li class="list-group-item">
+					Room 317, Chungam-Ro 77, Science Building Ⅱ, POSTECH, Pohang-Si, Republic of Korea (Zip: 37673)<br>
+					(in Korean) 대한민국 경상북도 포항시 남구 청암로 77 포항공과대학교 제 2공학관 317호 (우: 37673)<br>
+				</li>
+				<li class="list-group-item">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1613.6586229797967!2d129.32099752385267!3d36.01254565132359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356701d5bd6bfb23%3A0x471a066a5e57ed04!2zUG9oYW5nLCBIeW9qYS1kb25nLCDtj6ztla3qs7Xqs7zrjIDtlZnqtZAg7KCcMuqzte2Vmeq0gA!5e0!3m2!1sen!2skr!4v1566448360900!5m2!1sen!2skr" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</li>
+			</ul>
+		</div>
 	</div>
 </div>
