--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						2019.09. We are releasing source of FCGF via <a href="https://github.com/chrischoy/fcgf">Github</a>.
+					</li>
+					<li class="list-group-item">
+						2019.08. I will serve as an Session Chair for <b>ICCV 2019</b>.
+					</li>
+					<li class="list-group-item">
 						2019.07. I will serve as an Area Chair for <b>CVPR 2020</b>.
 					</li>
 					<li class="list-group-item">
@@ -94,11 +100,6 @@
 					</li>
 					<li class="list-group-item">
 						2019.06. One paper about fast indoor scene reconstruction is accepted to IROS 2019.
-					</li>
-					<li class="list-group-item">
-						2019.05. Open3D is being supported by <a href="https://developers.google.com/season-of-docs/docs/participants/" target="_blank">Google Season of Docs</a>.</li>
-					<li class="list-group-item">
-						2019.04. I joined <a href="http://www.postech.ac.kr/eng/" target="_blank">POSTECH</a> as an Assistant Professor.
 					</li>
 					<div id="accordion">
 						<div class="card">
@@ -111,6 +112,12 @@
 								</h5>
 							</div>
 							<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+								<li class="list-group-item">
+									2019.05. Open3D is being supported by <a href="https://developers.google.com/season-of-docs/docs/participants/" target="_blank">Google Season of Docs</a>.
+								</li>
+								<li class="list-group-item">
+									2019.04. I joined <a href="http://www.postech.ac.kr/eng/" target="_blank">POSTECH</a> as an Assistant Professor.
+								</li>
 								<li class="list-group-item">
 									2018.12. I will serve as an <a href="http://iccv2019.thecvf.com/area_chairs" target="_blank">Area Chair</a> for <b>ICCV 2019</b>.
 								</li>
